--- a/clusters/dev/redis-kustomize.yaml
+++ b/clusters/dev/redis-kustomize.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: voteapp
+  name: redisapp
   namespace: flux-system
 spec:
   healthChecks:
   - kind: Deployment
-    name: instavote
+    name: redis
     namespace: instavote
   interval: 1m0s
   path: ./deploy/redis
