--- a/clusters/dev/votes-kustomize.yaml
+++ b/clusters/dev/votes-kustomize.yaml
@@ -9,7 +9,7 @@ spec:
   - name: redisapp
   healthChecks:
   - kind: Deployment
-    name: 
+    name: instavote 
     namespace: instavote
   interval: 1m0s
   path: ./deploy/instavote
