--- a/clusters/dev/helm_release_gotk.yaml
+++ b/clusters/dev/helm_release_gotk.yaml
@@ -11,6 +11,6 @@ spec:
       sourceRef:
         kind: GitRepository
         name: instavote
-  interval: 10m0s
+  interval: 30s
   targetNamespace: tsb
 
